<resources>
    <string name="app_name">poop-android</string>

    <string name="menu_map">맵</string>
    <string name="menu_report">리포트</string>

    <!--report-->
    <string name="report_title">통계</string>
    <string name="report_title_semi">POOP 횟수</string>
    <string name="report_daily">일간</string>
    <string name="report_weekly">주간</string>
    <string name="report_monthly">월간</string>
    <string name="report_top10">POOP 순위</string>
    <string name="report_top10_standard">(최근 일주일)</string>
    <string name="report_pattern">배변 패턴 분석</string>
    <string name="report_pattern_date">당신의 장이 가장 활발한 요일은?</string>
    <string name="report_poop_count_desc">이만큼이나...</string>
    <string name="report_poop_top10_desc">명예의 전당에 오른 최강의 POOP워리어는?</string>
    <string name="report_mon">월요일</string>
    <string name="report_tue">화요일</string>
    <string name="report_wed">수요일</string>
    <string name="report_thu">목요일</string>
    <string name="report_fri">금요일</string>
    <string name="report_sat">토요일</string>
    <string name="report_sun">일요일</string>

    <!--login-->
    <string name="login_title">앞으로 사용할\n닉네임을 입력해주세요.</string>
    <string name="GO">GO!</string>

    <!--onboarding-->
    <string name="onboarding_skip">SKIP</string>
    <string name="onboarding_start">START</string>
    <string name="onboarding_title0">배가 아프신가요?</string>
    <string name="onboarding_desc0">당신은 당장 변기에 앉아\nPOOP을 킨뒤 상대방에게\nPOOP을 날리세요!</string>
    <string name="onboarding_title1">POOP을 눌러보세요</string>
    <string name="onboarding_desc1">다른 사용자에게 POOP 버튼을\n통하여 POOP을 선사해주세요!</string>
    <string name="onboarding_title2">GPS를 켜주세요</string>
    <string name="onboarding_desc2">실시간 화장실 장소 정보를 받아오기\n위해 GPS 정보가 반드시 필요합니다.\nGPS를 켜주세요!</string>

    <!--map-->
    <string name="map_label_me">Me</string>
</resources>
