<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--top bar-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/lightish_blue"
            app:elevation="4dp">
            <TextView
                android:id="@+id/report_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_title"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">
            <TextView
                android:id="@+id/report_title_semi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_title_semi"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="28dp"/>
            <TextView
                android:id="@+id/report_title_semi_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_poop_count_desc"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="6dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:id="@+id/report_title_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_daily"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/report_title_daily_value"
                    app:layout_constraintRight_toRightOf="@+id/report_title_daily_value"/>
                <TextView
                    android:id="@+id/report_title_daily_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="100회"
                    android:textColor="@color/lightish_blue"
                    android:textSize="32sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/report_title_weekly_value"
                    app:layout_constraintBottom_toBottomOf="@+id/report_title_weekly_value"
                    android:layout_marginLeft="20dp"/>


                <TextView
                    android:id="@+id/report_title_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_weekly"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <TextView
                    android:id="@+id/report_title_weekly_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="100회"
                    android:textColor="@color/lightish_blue"
                    android:textSize="32sp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/report_title_weekly"/>
                <TextView
                    android:id="@+id/report_title_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_monthly"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/report_title_monthly_value"
                    app:layout_constraintRight_toRightOf="@+id/report_title_monthly_value"/>
                <TextView
                    android:id="@+id/report_title_monthly_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="100회"
                    android:textColor="@color/lightish_blue"
                    android:textSize="32sp"
                    android:layout_marginTop="4dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/report_title_weekly_value"
                    app:layout_constraintBottom_toBottomOf="@+id/report_title_weekly_value"
                    android:layout_marginRight="20dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/report_title_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_pattern"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"/>
            <TextView
                android:id="@+id/report_title_pattern_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_pattern_date"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="6dp"/>
            <TextView
                android:id="@+id/report_title_pattern_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="수요일"
                android:textColor="@color/lightish_blue"
                android:textSize="32sp"
                android:layout_marginTop="10dp"
                android:paddingBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/report_title_top10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_top10"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="28dp"/>
                <TextView
                    android:id="@+id/report_title_top10_standard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_top10_standard"
                    android:textColor="@color/slate_grey"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="6dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/report_title_top10_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_poop_top10_desc"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="6dp"/>
            <ListView
                android:id="@+id/report_rank_list"
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:layout_marginTop="24dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>