<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@drawable/onboarding_1_illust"/>

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/onboarding_title0"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"/>
    <TextView
        android:id="@+id/onboarding_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/onboarding_desc0"
        android:textSize="16sp"
        android:lineSpacingExtra="4sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_title"
        android:layout_marginTop="24dp"/>

    <ImageView
        android:id="@+id/onboarding_start"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/onboarding_start"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/start_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.85"/>
</androidx.constraintlayout.widget.ConstraintLayout>